--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,9 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="images"/>
+	<classpathentry kind="src" path="help"/>
+	<classpathentry kind="src" path="audio"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/MySQL_8.1.18"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaAwtHacks"/>
 	<classpathentry kind="output" path="bin"/>
